W-16639192: Fix tests LazyMuleArtifactContextBeanFactoryTestCase and LazyComponentInitializerAdapterTestCase (#14024)