@@ -45,6 +45,10 @@
             --add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal=org.mule.runtime.spring.config
             --add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal.validation=org.mule.runtime.spring.config
             --add-exports=org.mule.runtime.artifact.ast.dependency.graph/org.mule.runtime.ast.graph.internal=org.mule.runtime.spring.config
+            --add-exports=org.mule.runtime.spring.config/org.mule.runtime.config.dsl.model=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.store=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.el.function=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.processor.strategy=ALL-UNNAMED
             ${surefire.test.unit.open.args}
         </surefire.args>
 
